--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body{
 }
 
 .note{
+    position: relative;
     background-color: #2d2e30;
     color: white;
     padding: 15px;
@@ -77,7 +78,19 @@ body{
     word-wrap: break-word;
 }
 
+.dlt-btn{
+  position: relative;
+  top: 1px;
+  left: 200px;
+  padding: 5px 10px;
+  color: white;
+  background-color: red;
+  border: none;
+  outline: none;
+  font-size: bold;
+  border-radius: 7px;
 
+}
 
 
 
