--- a/style.css
+++ b/style.css
@@ -76,12 +76,16 @@ body{
       box-shadow: 0px 6px 14px #010717;
     font-size: 15px;
     word-wrap: break-word;
-}
+} 
+
+
+
+
 
 .dlt-btn{
   position: relative;
   top: 1px;
-  left: 200px;
+  left: 170px;
   padding: 5px 10px;
   color: white;
   background-color: red;
@@ -90,6 +94,19 @@ body{
   font-size: bold;
   border-radius: 7px;
 
+}
+
+.edit-btn{
+    position: relative;
+  top: 1px;
+  left: 150px;
+  padding: 5px 10px;
+  color: white;
+  background-color: rgb(97, 90, 90);
+  border: none;
+  outline: none;
+  font-size: bold;
+  border-radius: 7px;
 }
 
 
